// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Group Box style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px 10px 10px 10px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-198zxrn"
    >
      <legend>
        Test
      </legend>
      <div
        style="position: relative; overflow: visible;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Line style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-ztfooh"
    >
      <div
        style="position: relative; overflow: visible;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Title Bar style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-ztfooh"
    >
      <div
        style="height: 20px; width: 100%; background-color: rgb(0, 0, 0); font-family: Liberation sans,sans-serif; font-weight: normal; font-style: normal; font-size: 1rem; color: rgb(240, 240, 240);"
      >
        Title
      </div>
      <div
        style="position: relative; overflow: visible;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for no style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-m53wvz"
    >
      <div
        style="position: relative; overflow: visible;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;
